Fix jdk preview configuration